Fake sliders, add styling to prevent footer from covering content, new header

--- a/web/small_molecule/styles.scss
+++ b/web/small_molecule/styles.scss
@@ -1,5 +1,55 @@
-.segment {
-  height: 100vh;
+$harvard-color-black: #000;
+$harvard-color-white: #FFF;
+
+* {
+  margin: 0;
+}
+
+body,
+html {
+  height: 100%;
+}
+
+.three-column__link {
+  &:hover {
+    h2 {
+      color: mix($harvard-color-black, $harvard-color-white, 75%);
+    }
+  }
+}
+
+.wrapper {
+  min-height: 100vh;
+  height: auto !important;
+  overflow: auto;
+}
+
+.container {
+  height: 100%;
+}
+
+.header {
+  flex: 0 0 auto;
+}
+
+.footer {
+  flex: 0 0 auto;
+  position: absolute;
+  bottom: 0;
+}
+
+.footer,
+.push {
+  height: 60px;
+  /* .push must be the same height as .footer */
+}
+
+.main {
+  flex: 1;
+  position: relative;
+  /* need this to position inner content */
+  overflow-y: auto;
+  margin: 0 auto -60px;
 }
 
 #instructions {
@@ -8,4 +58,95 @@
 
 #filters {
   text-align: left;
+}
+
+form {
+  position: relative;
+}
+
+.placeholder {
+  max-width: 100% !important;
+
+  .graph {
+    height: 500px !important;
+  }
+}
+// Temporary slider styles
+
+.slidecontainer {
+  width: 100%;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: mix($harvard-color-black, $harvard-color-white, 75%);
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: mix($harvard-color-black, $harvard-color-white, 25%);
+  cursor: pointer;
+}
+
+.rs {
+  position: relative;
+
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+    display: block;
+  }
+
+  span {
+    border-radius: 3px;
+    padding: 2px;
+    background-color: mix($harvard-color-black, $harvard-color-white, 5%);
+  }
+
+  .setvalue {
+    position: absolute;
+    top: -5px;
+    left: 0;
+    text-align: center;
+    font-weight: bold;
+    white-space: nowrap;
+  }
+
+  .rs-min {
+    margin: 2px 2px 2px 0;
+    float: left;
+  }
+
+  .rs-max {
+    margin: 2px 0 2px 2px;
+    float: right;
+  }
+}
+@media (max-width: 893px) {
+  .ui.grid > [class*="two column"].row > .column {
+    width: 100% !important;
+  }
+
+  .wrapper {
+    margin: 0 auto 0px;
+  }
+
+  .footer,
+  .push {
+    height: 115px;
+  }
 }
